# space-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ideas.md
.cache/clangd/index/: _fixes.hpp.8B1F6CC28A826B46.idx  _vectorize.hpp.7AF3FE80472AE3DD.idx  atmosphere.h.12330B7BF8177649.idx  billboard.cpp.4302C360981A2B7D.idx  billboard.h.363E9ABBAEF679A4.idx  camera.h.9D1C0E07123EFE5D.idx  celestialBody.cpp.52096CFEB06E78EE.idx  celestialBody.h.908D75E375019EFF.idx  common.hpp.110DEDAFEBE1E475.idx  component_wise.hpp.DDED479EEC98DD18.idx  component_wise.inl.A989F5F6F3BCDFF5.idx  compute_common.hpp.AD02597975ED5144.idx  compute_vector_decl.hpp.E99BED4A3316C2DA.idx  compute_vector_relational.hpp.D2073F32052F8ED7.idx  constants.hpp.E88447BAE268E207.idx  constants.inl.46A9A63E3A60B72A.idx  context.c.3B55AB0C31598A52.idx  egl_context.c.22A19CF0192EF330.idx  epsilon.hpp.8B121FEA43182609.idx  epsilon.inl.2F9DB2B772845BBA.idx  exponential.hpp.7F4373411ECA2916.idx  func_common.inl.28C1255E83672F86.idx  func_exponential.inl.5B1D4B0A51212289.idx  func_geometric.inl.28BF777A7BAB43DA.idx  func_integer.inl.87E596D132D7381D.idx  func_matrix.inl.3AFC47D7AD7D9659.idx  func_packing.inl.B8EC20C1C90A729B.idx  func_trigonometric.inl.34CA7D0AF749A158.idx  func_vector_relational.inl.383B6E2A03712BC3.idx  fwd.hpp.94F98C06FE462EA8.idx  geometric.hpp.1542C248FB8FDA6C.idx  glad.c.9B2DE450BBB8EB0D.idx  glad.h.8D760596BF94503C.idx  glfw3.h.06DBE4CDDF9BDAA0.idx  glfw3native.h.EB23BD095ABC4B11.idx  glm.hpp.858E629CD5F91A80.idx  glx_context.c.CEFB20D2B1D65B5F.idx  init.c.B4A96011E03C3C9D.idx  input.c.7B090858BCC1C104.idx  integer.hpp.3C311AEBE22790B6.idx  (+207 more)
.cache/jb/: compilation_graph.txt  index_stats.txt  module.modulemap  modules_graph.txt
.cache/jb/cache/: internal-1Z55HUENV76D6.pcm  system_Xlib-1Z55HUENV76D6.pcm  system_assert-1Z55HUENV76D6.pcm  system_stdbool-1Z55HUENV76D6.pcm  (+7 more)
.fleet/: run.json
runtime/shaders/: atmosphere.frag  grid.frag  grid.vert  octahedron.frag  octahedron.vert  planet-billboard.frag  planet-billboard.vert  ssbase.vert
src/: celestialBody.cpp  main.cpp  physics.cpp
src/includes/: atmosphere.h  billboard.h  camera.h  celestialBody.h  material.h  maths.h  octahedron.h  physics.h  shader.h  vertex.h
src/rendering/: billboard.cpp  octahedron.cpp  shader.cpp
(+705 files in other folders)
